# rules_go

go/private/: repositories.bzl
proto/: BUILD.bazel
